# anagrams

./: .gitignore  CMakeLists.txt  LICENSE  README.md  names.txt
src/: anagrams.cc  anagrams_functions.cc  anagrams_functions.h
